# query-genie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  example.env  init.sql  justfile  pyproject.toml
agent_service/: Dockerfile  README.md  __init__.py
agent_service/src/: __init__.py  main.py
agent_service/src/core/: __init__.py  agent_manager.py  config.py  prompts.py
agent_service/src/events/: __init__.py  redis_client.py  stream.py  workflow.py
agent_service/src/tools/: __init__.py
agent_service/src/utils/: __init__.py  formatting.py  logging_config.py  metrics.py  session_cleanup.py
agent_service/tests/: __init__.py  conftest.py  test_agent_manager.py  test_config.py  test_formatting.py  test_metrics.py  test_redis_client.py  test_redis_reconnect.py  test_stream.py  test_workflow.py
backend/: Dockerfile  README.md
backend/src/: __init__.py  app.py  config.py  logging_config.py
backend/src/api/: __init__.py  dependencies.py  middleware.py  models.py  rate_limit.py  routes.py
backend/src/templates/: index.html
backend/src/utils/: __init__.py  input_sanitizer.py  redis_client.py  session.py
backend/tests/: conftest.py  test_config.py  test_dependencies.py  test_input_sanitizer.py  test_redis_client.py  test_routes.py  test_session.py
frontend/: README.md  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
frontend/src/components/: ChatInput.module.css  ChatInput.tsx  ChatMessage.module.css  ChatMessage.tsx  Header.module.css  Header.tsx  ReasoningStep.tsx  ThinkingBox.tsx  ToolBadge.module.css  ToolBadge.tsx  ToolStep.tsx  TypingIndicator.tsx  WelcomeScreen.module.css  WelcomeScreen.tsx  WorkflowDialog.module.css  WorkflowDialog.tsx  index.ts
frontend/src/helpers/: index.ts  sessionHelpers.ts  workflowFormatters.ts
frontend/src/hooks/: index.ts  useChat.ts  useTypewriter.ts
frontend/src/services/: api.ts  index.ts
frontend/src/types/: api.d.ts  common.d.ts  components.d.ts  hooks.d.ts  index.ts
mcp_postgres/: Dockerfile  README.md
mcp_postgres/src/: server.py
mcp_postgres/src/core/: __init__.py  cache.py  config.py  database.py  logging_config.py
mcp_postgres/src/tools/: discovery.py  query.py  schema.py
mcp_postgres/src/utils/: __init__.py  errors.py  monitoring.py  validators.py
mcp_postgres/tests/: conftest.py
mcp_postgres/tests/core/: __init__.py  test_cache.py  test_config.py  test_database.py
mcp_postgres/tests/tools/: __init__.py  test_discovery.py  test_discovery_integration.py  test_query.py  test_query_integration.py  test_schema.py  test_schema_integration.py
mcp_postgres/tests/utils/: test_monitoring.py  test_validators.py
tasks/: README.md  check.just  clean.just  commit.just  format.just  install.just  test.just
